--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ILNumerics.Computing" Version="7.3.61" />
+    <PackageReference Include="MinVer" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <!-- Reference the actual analyzer and code fix assemblies as analyzers -->
