Simplify analyzers project layout - Merge analyzer and codefix projects to produce a single nupkg (modern best practice) - Add ILNumerics Community icon/logo

--- a/Analyzers.Tests/Analyzers.Tests.csproj
+++ b/Analyzers.Tests/Analyzers.Tests.csproj
@@ -20,7 +20,6 @@
     <PackageReference Include="xunit" Version="2.9.3" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Analyzers.Analyzers\Analyzers.Analyzers.csproj" />
-    <ProjectReference Include="..\Analyzers.CodeFixes\Analyzers.CodeFixes.csproj" />
+    <ProjectReference Include="..\Analyzers\Analyzers.csproj" />
   </ItemGroup>
 </Project>
