--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -15,8 +15,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <!-- Reference the actual analyzer and code fix assemblies as analyzers -->
-    <ProjectReference Include="..\Analyzers.Analyzers\Analyzers.Analyzers.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\Analyzers.CodeFixes\Analyzers.CodeFixes.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    <!-- Reference the combined analyzer project as an analyzer -->
+    <ProjectReference Include="..\Analyzers\Analyzers.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 </Project>
