Override PrivateAssets=true for consuming projects

--- a/Analyzers/Analyzers.csproj
+++ b/Analyzers/Analyzers.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="build\**" Pack="true" PackagePath="build\" />
     <None Include="$(TargetPath)" Pack="true" PackagePath="analyzers/dotnet/cs" />
   </ItemGroup>
 </Project>
