Adds ILN0006 to optimize scalar element access with GetValue - feature: Add analyzer that detects explicit casts of element access on ILNumerics arrays and suggests GetValue - feature: Add code fix to replace casted element access with .GetValue(...) - task: Add unit test to verify fix converts explicit casted element access to GetValue invocation

--- a/Analyzers.Tests/Analyzers.Tests.csproj
+++ b/Analyzers.Tests/Analyzers.Tests.csproj
@@ -4,6 +4,8 @@
     <RootNamespace>ILNumerics.Community.Analyzers.Tests</RootNamespace>
     <AssemblyName>ILNumerics.Community.Analyzers.Tests</AssemblyName>
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ILNumerics.Computing" Version="7.4.3" />
@@ -19,6 +21,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.7" PrivateAssets="all" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Analyzers\Analyzers.csproj" />
